Fix page margins to scale down on small widths

--- a/_assets/stylesheets/mhv.scss
+++ b/_assets/stylesheets/mhv.scss
@@ -30,7 +30,7 @@ article.home {
 
 article.page {
   section {
-    margin: 0 8em;
+    margin: 0 10%; // Same as posts
   }
 }
 
